--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@
 main {
   padding: 0.5em;
 }
+
+body{
+    background-color: #2E2E2E;
+    width: 100%;
+    height: 100%;
+}
+p {
+	font-size: 2em;  
+}
